--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "kyslik/column-sortable": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.5",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
